trustfall_core/src/resources/test_data/valid_queries/recurse_on_parameterized_edge.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        multiple(max: 3) @recurse(depth: 3) {
            value @output
        }
    }
}"#,
    arguments: {},
)
