trustfall_core/src/resources/test_data/parse_errors/duplicate_recurse.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        out_Directory_Subdirectory @recurse(depth: 2) @recurse(depth: 3) {
            name @output
        }
    }
}"#,
    arguments: {},
)
